# antfly

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  .license-header-apache.txt  .license-header.txt  .redocly.lint-ignore.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.antfly-operator  Dockerfile.antfly-proxy  Dockerfile.omni  Dockerfile.proxy  Dockerfile.termite  Dockerfile.termite-omni  Dockerfile.termite-operator  Dockerfile.termite-proxy  GLINER2_READINESS.md  LICENSE  Makefile  OMNI_OPERATOR.md  Procfile  Procfile_tls  README.md  SDK.md  bleve-query-openapi.yaml  cloudbuild.yaml  go.mod  go.sum  openapi.yaml  quickstart.tape  wikipedia-config.json
.githooks/: pre-commit  pre-push
.github/: actionlint.yaml
devops/: prometheus.yml
zig/e2e/antfly/: README.md  conftest.py  helpers.py  pyproject.toml  test_auth.py  test_backup_restore.py  test_cdc.py  test_cli.py  test_distributed_status.py  test_foreign_sources.py  test_graph.py  test_index_lifecycle.py  test_joins.py  test_linear_merge.py  test_query_string.py  test_quickstart.py  test_relational.py  test_relational_algebraic.py  test_resolution.py  test_retrieval.py  test_scaling.py  test_schema_migration.py  test_sparse.py  test_swarm.py  test_sync_levels.py  test_transactions.py  test_transforms.py
zig/e2e/inference/: __init__.py  conftest.py  helpers.py  models.py  pull_models.py  pyproject.toml  test_chat.py  test_chunk.py  test_classify.py  test_embed.py  test_extract.py  test_generate.py  test_models.py  test_openai_compat.py  test_read.py  test_recognize.py  test_rerank.py  test_rewrite.py  test_sparse_embed.py  test_transcribe.py  test_version.py
zig/e2e/inference/testdata/: surya_expectations.sample.json
(+5332 files in other folders)
