[project]
name = "antfly-e2e"
version = "0.1.0"
description = "Portable E2E tests for Antfly inference (Go, Zig, or Cloud)"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "requests>=2.31",
    "openai>=1.0",
    "numpy>=1.26",
    "huggingface-hub>=0.20",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "transformers>=5.4.0",
    "sentencepiece>=0.2.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require large models or long inference",
    "multimodal: marks tests requiring vision/audio model capabilities",
    "model_integration: marks tests requiring local model weights or downloads",
    "browser_integration: marks tests requiring a browser or WebGPU runtime",
    "streaming: marks tests for SSE streaming endpoints",
    "verification: marks verification and consistency tests",
]
testpaths = ["."]
addopts = "-v --import-mode=importlib"
norecursedirs = ["deps", ".git", ".venv", "__pycache__"]
